@@ -20,6 +20,7 @@ package ganymede.shell;
  * limitations under the License.
  * ##########################################################################
  */
+import ganymede.notebook.NotebookContext;
 import ganymede.server.Message;
 import java.io.InputStream;
 import java.io.PrintStream;
@@ -30,7 +31,6 @@ import java.util.LinkedList;
 import java.util.Map;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
-import javax.script.ScriptContext;
 import lombok.Data;
 
 import static java.io.StreamTokenizer.TT_EOF;
@@ -79,7 +79,7 @@ public interface Magic {
     /**
      * Entry-point method.  Executed in the {@link ganymede.shell.Shell}.
      * Default implementation sends to the
-     * {@link #execute(ScriptContext,String,String)} method in the
+     * {@link #execute(NotebookContext,String,String)} method in the
      * {@link jdk.jshell.JShell} instance.
      *
      * @param   shell           The {@link Shell}.
@@ -109,12 +109,11 @@ public interface Magic {
      * Implementation method.  Executed in the {@link jdk.jshell.JShell}
      * instance.
      *
-     * @param   context         The {@link ScriptContext}.
+     * @param   __              The {@link NotebookContext}.
      * @param   line0           The initial magic line.
      * @param   code            The remainder of the cell.
      */
-    public void execute(ScriptContext context,
-                        String line0, String code) throws Exception;
+    public void execute(NotebookContext __, String line0, String code) throws Exception;
 
     /**
      * Method to determine if the code is cell magic (starts with
@@ -213,7 +212,7 @@ public interface Magic {
      * {@link jdk.jshell.JShell} instance.  The
      * {@link #sendTo(Shell,String,String,String)} method packs the
      * arguments and creates a
-     * {@link #receive(String,ScriptContext,String,String)} expression which
+     * {@link #receive(String,NotebookContext,String,String)} expression which
      * is evaluated in the {@link jdk.jshell.JShell}.
      *
      * @param   shell           The {@link Shell}.
@@ -223,7 +222,7 @@ public interface Magic {
      */
     public static void sendTo(Shell shell, String name, String line0, String code) throws Exception {
         var expression =
-            String.format("__.invokeStaticMethod(\"%s\", \"%s\", new Class<?>[] { String.class, javax.script.ScriptContext.class, String.class, String.class }, \"%s\", __.context, \"%s\", \"%s\")",
+            String.format("__.invokeStaticMethod(\"%s\", \"%s\", new Class<?>[] { String.class, ganymede.notebook.NotebookContext.class, String.class, String.class }, \"%s\", __, \"%s\", \"%s\")",
                           Magic.class.getName(), "receive",
                           name, encode(line0), encode(code));
 
@@ -232,7 +231,7 @@ public interface Magic {
 
     /**
      * Static {@link MagicMap} instance used by
-     * {@link #receive(String,ScriptContext,String,String)}.
+     * {@link #receive(String,NotebookContext,String,String)}.
      */
     public static MagicMap MAP = new MagicMap();
 
@@ -240,20 +239,20 @@ public interface Magic {
      * Static method to receive a request in the {@link jdk.jshell.JShell}
      * instance.  The {@link #sendTo(Shell,String,String,String)} method
      * packs the arguments and creates a
-     * {@link #receive(String,ScriptContext,String,String)} expression which
+     * {@link #receive(String,NotebookContext,String,String)} expression which
      * is evaluated in the {@link jdk.jshell.JShell}.
      *
      * @param   name            The magic name.
-     * @param   context         The {@link ScriptContext}.
+     * @param   __              The {@link NotebookContext}.
      * @param   line0           The initial magic line.
      * @param   code            The remainder of the cell.
      */
-    public static void receive(String name, ScriptContext context,
+    public static void receive(String name, NotebookContext __,
                                String line0, String code) throws Exception {
         MAP.reload();
 
         if (MAP.containsKey(name)) {
-            MAP.get(name).execute(context, decode(line0), decode(code));
+            MAP.get(name).execute(__, decode(line0), decode(code));
         } else {
             throw new IllegalStateException("Magic '" + name + "' not found");
         }
