@@ -21,9 +21,9 @@ package ganymede.shell.magic;
  * ##########################################################################
  */
 import ball.annotation.ServiceProviderFor;
+import ganymede.notebook.NotebookContext;
 import ganymede.shell.Magic;
 import java.util.Properties;
-import javax.script.ScriptContext;
 import lombok.NoArgsConstructor;
 import lombok.ToString;
 import lombok.extern.log4j.Log4j2;
@@ -39,8 +39,7 @@ import lombok.extern.log4j.Log4j2;
 @NoArgsConstructor @ToString @Log4j2
 public class Env extends AbstractPropertiesMagic {
     @Override
-    public void execute(ScriptContext context,
-                        String line0, String code) throws Exception {
+    public void execute(NotebookContext __, String line0, String code) throws Exception {
         if (! code.isBlank()) {
             var properties = compile(code);
 
