@@ -21,10 +21,10 @@ package ganymede.shell.magic;
  * ##########################################################################
  */
 import ball.annotation.ServiceProviderFor;
+import ganymede.notebook.NotebookContext;
 import ganymede.server.renderer.ForType;
 import ganymede.shell.Magic;
 import java.util.stream.Stream;
-import javax.script.ScriptContext;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 import lombok.ToString;
@@ -41,13 +41,12 @@ import lombok.extern.log4j.Log4j2;
 @NoArgsConstructor @ToString @Log4j2
 public class HTML extends Thymeleaf {
     @Override
-    protected void execute(ScriptContext context,
-                           String[] argv, String code) throws Exception {
+    protected void execute(NotebookContext __, String[] argv, String code) throws Exception {
         argv =
             Stream.of(new String[] { super.getMagicNames()[0] }, argv)
             .flatMap(Stream::of)
             .toArray(String[]::new);
 
-        super.execute(context, argv, code);
+        super.execute(__, argv, code);
     }
 }
